@@ -18,6 +18,7 @@ FEATURE: Plug | Added various convenience methods for using log views and config
 FEATURE: Plug | Added API to allow native UI objects to be added to config views [amc1]
 FEATURE: Plug | Added some more methods for plugins to control some transport mechanisms [amc1]
 FEATURE: Plug | Added ability to add menus to status entry objects [amc1]
+FEATURE: Plug | Plugins can now open files using default application handlers [amc1]
 
 CHANGE: Core  | added "upload_only" flag to AZMP/LTEP handshakes, disconnect any uploading_only peers we don't need / that don't need us when disconnect seeds when seeding is set [The 8472]
 CHANGE: Core  | Further startup speed improvements [The 8472, amc1, parg]
